syntax = "proto3";

package memiavl;

option go_package = "github.com/crypto-org-chain/cronos-store/memiavl";

import "gogoproto/gogo.proto";

// KVPair represents a key-value pair in a change set.
message KVPair {
  bool delete = 1;
  bytes key = 2;
  bytes value = 3;
}

// ChangeSet represents a list of key-value updates.
message ChangeSet {
  repeated KVPair pairs = 1 [(gogoproto.nullable) = false];
}
