syntax = "proto3";

package memiavl;

option go_package = "github.com/crypto-org-chain/cronos-store/memiavl";

import "gogoproto/gogo.proto";
import "memiavl/changeset.proto";

// NamedChangeSet combines a tree name with the associated change set.
message NamedChangeSet {
  ChangeSet changeset = 1 [(gogoproto.nullable) = false];
  string name = 2;
}

// TreeNameUpgrade defines upgrade operations on tree names.
message TreeNameUpgrade {
  string name = 1;
  string rename_from = 2;
  bool delete = 3;
}

// WALEntry represents a single write-ahead log entry.
message WALEntry {
  repeated NamedChangeSet changesets = 1;
  repeated TreeNameUpgrade upgrades = 2;
}
